<resources>
    <string name="app_name">secureMessaging</string>
    <string name="sign_up">sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="forgot_password"><u>forgot password ?</u></string>
    <string name="settings">settings</string>
    <string name="help">Help</string>
    <string name="starred">Starred</string>
    <string name="logout">Logout</string>
    <string name="retype_password">Retype password</string>
    <string name="remember_me">Remember Me</string>
    <string-array name="names_of_users">
        <item>Mahesh Joseph Sadashiv</item>
        <item>Madhuri N</item>
        <item>Medhini Oak</item>
        <item>Kaushal K</item>
    </string-array>
</resources>
